--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -241,27 +241,33 @@
             
             <div class="mb-4">
               <label for="voice_gender" class="block text-black-700">Select Voices :</label>
-              <select id="voice_gender" name="voice" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:border-blue-500 bg-black">
-                <option value="Joanna">Joanna</option>
-                <option value="Matthew">Matthew</option>
-                <option value="Ivy">Ivy</option>
-                <option value="Justin">Justin</option>
-                <option value="Kendra">Kendra</option>
-                <option value="Kimberly">Kimberly</option>
-                <option value="Salli">Salli</option>
-                <option value="Joey">Joey</option>
-                <option value="Nicole">Nicole</option>
-                <option value="Russell">Russell</option>
-                <option value="Amy">Amy</option>
-                <option value="Brian">Brian</option>
-                <option value="Emma">Emma</option>
-                <option value="Daniella">Daniella</option>
-                <option value="Ruth">Ruth</option>
-                <option value="Gregory">Gregory</option>
-                <option value="Kevin">Kevin</option>
-                <option value="Joey">Joey</option>
-                <option value="Stephan">Stephan</option>
-              </select>
+              <select
+                  name="voice"
+                  class="block w-full px-4 py-2 mt-1 border border-gray-300 rounded-md focus:ring focus:ring-indigo-200 focus:border-indigo-500 focus:outline-none focus:ring-opacity-50 mb-10 bg-black"
+                >
+                {% comment %} <option value="Neutral">Neutral</option>
+                <option value="Female">Female</option>
+                <option value="Male">Male</option> {% endcomment %}
+                <option value="21m00Tcm4TlvDq8ikWAM">Rachel</option>
+                <option value="29vD33N1CtxCmqQRPOHJ">Drew</option>
+                <option value="2EiwWnXFnvU5JabPnv8n">Clyde</option>
+                <option value="AZnzlk1XvdvUeBnXmlld">Domi</option>
+                <option value="CYw3kZ02Hs0563khs1Fj">Dave</option>
+                <option value="D38z5RcWu1voky8WS1ja">Fin</option>
+                <option value="EXAVITQu4vr4xnSDxMaL">Sarah</option>
+                <option value="ErXwobaYiN019PkySvjV">Antoni</option>
+                <option value="GBv7mTt0atIp3Br8iCZE">Thomas</option>
+                <option value="IKne3meq5aSn9XLyUdCD">Charlie</option>
+                <option value="JBFqnCBsd6RMkjVDRZzb">George</option>
+                <option value="LcfcDJNUP1GQjkzn1xUU">Emily</option>
+                <option value="MF3mGyEYCl7XYWbV9V6O">Elli</option>
+                <option value="N2lVS1w4EtoT3dr4eOWO">Callum</option>
+                <option value="ODq5zmih8GrVes37Dizd">Patrick</option>
+                <option value="SOYHLrjzK2X1ezoPC6cr">Harry</option>
+                <option value="TX3LPaxmHKxFdv7VOQHJ">Liam</option>
+                <option value="ThT5KcBeYPX3keUQqHPh">Dorothy</option>
+                <option value="TxGEqnHWrfWFTfGW9XjX">Josh</option>
+                </select>
             </div>
             
             {% include "select_intro_outro.html" %}
