--- a/templates/enter_intro.html
+++ b/templates/enter_intro.html
@@ -202,6 +202,8 @@
         <div>
           <label for="intro_text" class="block text-sm font-medium text-black-700">Intro Text:</label>
           <textarea name="intro_text" required class="mt-1 p-2 border rounded-md w-full bg-black"></textarea>
+          <label for="intro_text" class="block text-sm font-medium text-black-700">Newscaster:</label>
+        <textarea name="news_caster" required class="mt-1 p-2 border rounded-md w-full bg-black"></textarea>
         </div>
         <div id="suggestions" class="mt-2 text-sm text-gray-400">
           <h1>Suggestions for intros:</h1><br/>
