--- a/templates/enter_outro.html
+++ b/templates/enter_outro.html
@@ -202,6 +202,8 @@
         <div>
           <label for="outro_text" class="block text-sm font-medium text-white-700">Outro Text:</label>
           <textarea name="outro_text" required class="mt-1 p-2 border rounded-md w-full bg-black"></textarea>
+          <label for="outro_text" class="block text-sm font-medium text-black-700">Newscaster:</label>
+          <textarea name="news_caster" required class="mt-1 p-2 border rounded-md w-full bg-black"></textarea>
         </div>
         <div id="suggestions" class="mt-2 text-sm text-gray-400">
           <h1>Suggestions for outros:</h1><br/>
