--- a/templates/add_newscaster.html
+++ b/templates/add_newscaster.html
@@ -73,7 +73,16 @@
               class="text-sm font-semibold leading-6 text-black-900"
               >Weather</a
             > {% endcomment %}
-           
+            <div class="flex items-center justify-center">
+                <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
+                <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
+            </div>
+            
+            <a
+              href="/Newscasters"
+              class="text-sm font-semibold leading-6 text-black-900"
+              >Home</a
+            >
             
             <a
               href="/contactus"
@@ -193,6 +202,7 @@
       <br/>
       <br/>
       <div class="container mx-auto p-14">
+        
         <h1 class="text-2xl font-bold mb-4 text-center">Add Newscaster</h1>
         <!-- Newscaster Form -->
         <div class="max-w-md mx-auto "> <!-- Added max-w-md and mx-auto for width and centering -->
