--- a/templates/enter_intro.html
+++ b/templates/enter_intro.html
@@ -72,15 +72,10 @@
           >Weather</a
         > {% endcomment %}
         <a
-          href="/weather-zipcode"
-          class="text-sm font-semibold leading-6 text-gray-900"
-          >Weather-by-zipcode</a
-        >
-        <a
-          href="/news"
-          class="text-sm font-semibold leading-6 text-gray-900"
-          >News</a
-        >
+              href="/"
+              class="text-sm font-semibold leading-6 text-black-900"
+              >Home</a
+            >
         <a
           href="/contactus"
           class="text-sm font-semibold leading-6 text-gray-900"
