--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -74,16 +74,11 @@ Illustration from undraw.co by the amazing Katerina Limpitsouni
             class="text-sm font-semibold leading-6 text-gray-900"
             >Weather</a
           > {% endcomment %}
-          <a
-            href="/news"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >News</a
-          >
-          <a
-            href="/weather-zipcode"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Weather-by-zipcode</a
-          >
+          <div class="flex items-center justify-center">
+            <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
+            <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
+        </div>
+        
           
           <a
             href="/contactus"
