--- a/templates/enter_outro_weather.html
+++ b/templates/enter_outro_weather.html
@@ -5,11 +5,11 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Outros</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
       /* Dark Mode styles */
       body.dark-mode {
@@ -22,7 +22,7 @@
       body.dark-mode a:hover {
         color: #48a999;
       }
-      .system{
+      .system {
         margin-top: 319px;
       }
       /* Add more dark mode styles as needed */
@@ -66,48 +66,33 @@
         </button>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
-        {% comment %} <a
-          href="/weather"
-          class="text-sm font-semibold leading-6 text-gray-900"
+        {% comment %}
+        <a href="/weather" class="text-sm font-semibold leading-6 text-gray-900"
           >Weather</a
-        > {% endcomment %}
-        <a
-          href="/weather-zipcode"
-          class="text-sm font-semibold leading-6 text-gray-900"
-          >Weather-by-zipcode</a
         >
-        <a
-          href="/news"
-          class="text-sm font-semibold leading-6 text-gray-900"
-          >News</a
+        {% endcomment %}
+        <a href="/" class="text-sm font-semibold leading-6 text-black-900"
+          >Home</a
         >
         <a
           href="/contactus"
           class="text-sm font-semibold leading-6 text-gray-900"
           >Contact us</a
         >
-        <a
-          href="/aboutus"
-          class="text-sm font-semibold leading-6 text-gray-900"
+        <a href="/aboutus" class="text-sm font-semibold leading-6 text-gray-900"
           >About us</a
         >
-        <a
-          href="/chatbot"
-          class="text-sm font-semibold leading-6 text-gray-900"
+        <a href="/chatbot" class="text-sm font-semibold leading-6 text-gray-900"
           >Chatbot</a
         >
         {% if user.is_authenticated %}
         <p class="text-lg text-black-800">
           Welcome,
-          <span class="text-blue-500 font-semibold"
-            >{{ user.username }}</span
-          >!
+          <span class="text-blue-500 font-semibold">{{ user.username }}</span>!
         </p>
-        <a
-              href="/admin"
-              class="text-sm font-semibold leading-6 text-black-900"
-              >Admin Panel</a
-            >
+        <a href="/admin" class="text-sm font-semibold leading-6 text-black-900"
+          >Admin Panel</a
+        >
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
 
@@ -137,10 +122,7 @@
               alt=""
             />
           </a>
-          <button
-            type="button"
-            class="-m-2.5 rounded-md p-2.5 text-gray-700"
-          >
+          <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
             <span class="sr-only">Close menu</span>
             <svg
               class="h-6 w-6"
@@ -195,21 +177,49 @@
     </div>
   </header>
   <body class="bg-gray-100 flex items-center justify-center h-screen dark-mode">
-    <div class="max-w-md w-full  p-8 rounded-md shadow-md bg-black">
-      <h2 class="text-2xl font-bold mb-6 text-center text-white">Enter Outro</h2>
+    <div class="max-w-md w-full p-8 rounded-md shadow-md bg-black">
+      <h2 class="text-2xl font-bold mb-6 text-center text-white">
+        Enter Outro
+      </h2>
       <form method="post" action="" class="space-y-4">
         {% csrf_token %}
         <div>
-          <label for="outro_text" class="block text-sm font-medium text-white-700">Outro Text:</label>
-          <textarea name="outro_text" required class="mt-1 p-2 border rounded-md w-full bg-black"></textarea>
+          <label
+            for="outro_text"
+            class="block text-sm font-medium text-white-700"
+            >Outro Text:</label
+          >
+          <textarea
+            name="outro_text"
+            required
+            class="mt-1 p-2 border rounded-md w-full bg-black"
+          ></textarea>
+          <label
+            for="outro_text"
+            class="block text-sm font-medium text-black-700"
+            >Newscaster:</label
+          >
+          <textarea
+            name="news_caster"
+            required
+            class="mt-1 p-2 border rounded-md w-full bg-black"
+          ></textarea>
         </div>
         <div id="suggestions" class="mt-2 text-sm text-gray-400">
-          <h1>Suggestions for outros:</h1><br/>
+          <h1>Suggestions for outros:</h1>
+          <br />
           {% for suggestion in suggestions %}
-            <span class="cursor-pointer hover:text-white" onclick="populateIntro('{{ suggestion }}')">{{ suggestion }} <br/><br/></span>
+          <span
+            class="cursor-pointer hover:text-white"
+            onclick="populateIntro('{{ suggestion }}')"
+            >{{ suggestion }} <br /><br
+          /></span>
           {% endfor %}
         </div>
-        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 w-full bg-black">
+        <button
+          type="submit"
+          class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 w-full bg-black"
+        >
           Submit
         </button>
       </form>
@@ -217,9 +227,9 @@
 
     <script>
       function populateIntro(suggestion) {
-        document.querySelector('textarea[name="outro_text"]').value = suggestion;
+        document.querySelector('textarea[name="outro_text"]').value =
+          suggestion;
       }
     </script>
-    
   </body>
 </html>
