--- a/templates/select_intro_outro.html
+++ b/templates/select_intro_outro.html
@@ -5,7 +5,7 @@
 <select
   id="intros_user"
   name="intros_user"
-  class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 w-full bg-black text-white"
+  class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 w-full  text-white bg-black"
 >
   {% for intro in intros %}
   <option value="{{ intro.intros }}">{{ intro.intros }}</option>
@@ -18,7 +18,7 @@
 <select
   id="outro_user"
   name="outro_user"
-  class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 w-full bg-black text-white"
+  class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 w-full  text-white bg-black"
 >
   {% for outro in outros %}
   <option value="{{outro.outros}}">{{outro.outros}}</option>
