--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -220,13 +220,9 @@
           <div class="flex justify-center mb-5">
             <h1 class="text-2xl sm:text-2xl lg:text-2xl font-bold text-center">
               Task scheduled successfully for {% if recurr_type == "weekly" %}
-              <span class="text-blue-500">Every Week</span> at {{ time_to_show
-              }}! {% elif recurr_type == "monthly" %}
-              <span class="text-green-500">Every Month</span> at {{ time_to_show
-              }}! {% elif recurr_type == "everyhour" %}
-              <span class="text-yellow-500">Every Hour</span> at {{ time_to_show
-              }}! {% else %} <span class="text-red-500">One time</span> at {{
-              time_to_show }}! {% endif %}
+              <span class="text-blue-500">Every Week</span> at {{ time_to_show}}! {% elif recurr_type == "monthly" %}
+              <span class="text-green-500">Every Month</span> at {{ time_to_show}}! {% elif recurr_type == "everyhour" %}
+              <span class="text-yellow-500">Every Hour</span> at {{ time_to_show}}! {% else %} <span class="text-red-500">One time</span> at {{time_to_show }}! {% endif %}
             </h1>
           </div>
           {% endif %}
