--- a/templates/newscasters.html
+++ b/templates/newscasters.html
@@ -19,6 +19,15 @@
         body.dark-mode a:hover {
           color: #48a999;
         }
+        body {
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+        }
+  
+        .bg-gray-800.text-white.text-center.py-4 {
+          margin-top: auto;
+        }
         /* Add more dark mode styles as needed */
       </style>
 </head>
@@ -261,9 +270,9 @@
 
 
     <footer class="bg-gray-800 text-white text-center py-4">
-        <div class="container mx-auto">
-            <p>&copy; <span id="currentYear"></span> - GroundRushLabs</p>
-        </div>
+      <div class="container mx-auto">
+        <p>&copy; <span id="currentYear"></span> - GroundRushLabs</p>
+      </div>
     </footer>
 </body>
 <script>
