--- a/templates/add_newscaster.html
+++ b/templates/add_newscaster.html
@@ -201,24 +201,25 @@
       <br/>
       <br/>
       <br/>
-      <div class="container mx-auto p-14">
+      <div class="bg-gray-800 min-h-screen flex items-center justify-center">
+        <div class="bg-white p-8 rounded shadow-md w-full md:w-1/2 lg:w-1/3">
         
-        <h1 class="text-2xl font-bold mb-4 text-center">Add Newscaster</h1>
+        <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">Add Newscaster</h1>
         <!-- Newscaster Form -->
-        <div class="max-w-md mx-auto "> <!-- Added max-w-md and mx-auto for width and centering -->
-            <form method="post" action="{% url 'rss_to_audio_app:add_newscaster' %}">
+         <!-- Added max-w-md and mx-auto for width and centering -->
+            <form method="post" action="{% url 'rss_to_audio_app:add_newscaster' %}" class="space-y-4">
                 {% csrf_token %}
                 <div class="mb-4">
-                    <label for="name" class="block text-sm font-bold text-black-700">Name:</label>
-                    <input type="text" id="name" name="name" class="border rounded w-full py-2 px-3 bg-black" required>
+                    <label for="name" class="block text-sm font-medium text-gray-700">Name:</label>
+                    <input type="text" id="name" name="name" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
                 </div>
                 <div class="mb-4">
-                    <label for="language" class="block text-sm font-bold text-black-700">Language:</label>
-                    <input type="text" id="language" name="language" class="border rounded w-full py-2 px-3 bg-black" required>
+                    <label for="language" class="block text-sm font-medium text-gray-700">Language:</label>
+                    <input type="text" id="language" name="language" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
                 </div>
                 <div class="mb-4">
-                    <label for="voice" class="block text-sm font-bold text-black-700">Voice:</label>
-                    <input type="text" id="voice" name="voice" class="border rounded w-full py-2 px-3 bg-black" required>
+                    <label for="voice" class="block text-sm font-medium text-gray-700">Voice:</label>
+                    <input type="text" id="voice" name="voice" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
                 </div>
                 <br/>
                 <br/>
@@ -227,6 +228,7 @@
                     Save Newscaster
                 </button>
             </form>
+          
         </div>
     </div>
     
