--- a/templates/add_newscaster.html
+++ b/templates/add_newscaster.html
@@ -223,6 +223,8 @@
                 </div>
                 <br/>
                 <br/>
+                <h3 class="text-center text-orange-500 font-bold bg-black">{{ error_message }}</h3>
+
     
                 <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-auto block">
                     Save Newscaster
